<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MSR Silver House</string>
    <string name="login">LOGIN</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="checkboxshow">Not a Member yet? Sign Up here.</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="sendotp">Send OTP</string>
    <string name="alreadyhaveanaccount">Already have an account?</string>
    <string name="signup">SignUp</string>
    <string name="welcome">Welcome</string>
    <string name="donthaveanaccount">Don\'t have an account ?</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="freshproducts">Fresh Products</string>
    <string name="viewall">View All</string>
    <string name="verification">Verification</string>
    <string name="codeissentto">Code is sent to</string>
    <string name="didntreceivecode">Didn\'t receive code ?</string>
    <string name="requestagain">Request again</string>
    <string name="verifyandcreateaccount">Verify and Create Account</string>
    <string name="addtocart">Add To Cart</string>
    <string name="yourcartisempty">Your cart is empty</string>
    <string name="total">Total :</string>
    <string name="proceedtocheckout">Proceed to checkout</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="cartvalue">Cart Value</string>
    <string name="discount">Discount</string>
    <string name="applycoupon">Apply Coupon</string>
    <string name="taxes">Taxes</string>
    <string name="deliverycharges">Delivery Charges</string>
    <string name="totalamount">Total Amount</string>
    <string name="pay">Pay</string>
    <string name="name">Name</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="addressdoorno">Address(House No, Building)</string>
    <string name="addressstreet">Address(Street, Area)</string>
    <string name="town">Localty/Town</string>
    <string name="city">City</string>
    <string name="landmark">Near by Landmark</string>
    <string name="add_address">Add Address</string>
    <string name="typesofaddress">Types of address</string>
    <string name="makethisasmydefaultaddress">Make this as my default address</string>
    <string name="myaddress">My Address</string>
    <string name="wishlist">Wish List</string>
    <string name="myorders">My Orders</string>
    <string name="changepassword">Change Password</string>
    <string name="signout">Sign Out</string>
    <string name="subscription">Subscription</string>
    <string name="settings">Settings</string>
    <string name="office">Office</string>
    <string name="noaddressfound">No address found</string>
    <string name="addnewaddress">Add New Address</string>
    <string name="orderdate">Order Date</string>
    <string name="orderid">Order ID</string>
    <string name="ordertotal">Order Total</string>
    <string name="paymentinformation">Payment Information</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="purchasedetails">Purchase Details</string>
    <string name="ordersuccessful">Order Successful</string>
    <string name="ordersummary">OrderSummary</string>
    <string name="totalitems">Total Items</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="review">Review</string>
    <string name="checkout">Checkout</string>
    <string name="clickheretoseedetail">Click here to see detail</string>
    <string name="getfreshfruits">Get Fresh Fruits</string>
    <string name="everyweekatyourdoorstep">Every week at your doorstep</string>
    <string name="premium">Premium</string>
    <string name="subscribenow">Subscribe now</string>
    <string name="quantity">Quantity</string>
    <string name="weight">Weight</string>
    <string name="about">About</string>
    <string name="termsconditions">Terms &amp; Conditions</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="basket">Basket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="changeaddress">Change Address</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btncontinue">Continue</string>
    <string name="needhelp">Need Help?</string>
    <string name="contactus">Contact Us</string>
    <string name="shareapp">Share App</string>
    <string name="skip">Skip</string>
    <string name="addresslandmark">Landmark -</string>
    <string name="contact">Contact -</string>
    <string name="district">District</string>
    <string name="country">Country</string>
    <string name="shippingto">Shipping to</string>
    <string name="nofavouritesfound">No Favourites Found</string>
    <string name="mrp">M.R.P.</string>
    <string name="quantitys">Quantity : </string>
    <string name="nomyordersfound">No My Orders Found</string>
    <string name="orderedon">Ordered on</string>
    <string name="deliveredon">Delivered on :</string>
    <string name="orderstatus">Order Status :</string>
    <string name="deliveryaddress">Delivery Address</string>
    <string name="pricedetails">Price Details</string>
    <string name="noordersdetailsfound">No orders details found</string>
    <string name="chooseprice">Choose price</string>
    <string name="confirm">Confirm</string>
    <string name="nocheckoutdata">No checkout data</string>
    <string name="terms1">1.1.  These Fateh Terms and Conditions ("Terms and Conditions") outline the rules and regulations for the use of Fateh International Private Limited’s ("Fateh") Website ("Website").</string>
    <string name="terms2">1.2.  For the purpose of these Terms and Conditions, wherever the context so requires "You" or "User" shall mean any natural or legal person who has agreed to become a buyer by registering on the Website or any person who visits the Website for registering on the Website or otherwise.</string>
    <string name="terms3">1.3.  Except as otherwise expressly stated with respect to our products, all contents of the site are offered on an "as is" basis without any warranty whatsoever either express or implied. Fateh makes no representations, express or implied, including without limitation implied warranties of merchantability and fitness for a particular purpose.</string>
    <string name="terms4">1.4.  Fateh does not guarantee the functions contained in the site will be uninterrupted or error-free, that this site or its server will be free of viruses or other harmful components, or defects will be corrected even if Fateh is aware of them.</string>
    <string name="terms5">1.5.  These Terms and Conditions are published in accordance with the provisions of Rule 3 of the Information Technology (Intermediaries Guidelines) Rules, 2011.</string>
    <string name="terms6">1.6.  Should you have any clarifications regarding the Terms and Conditions, please do not hesitate to contact us info@fatehfruits.com.</string>
    <string name="reg1">2.1.  You can purchase the products offered on the Website as a User. As part of the registration process on the Website, Fateh may collect certain personally identifiable information about You including first and last name, email address, mobile phone number and contact details, Postal code, Demographic profile (like your age, gender, address etc).</string>
    <string name="reg2">2.2.  As a User, You are responsible for maintaining the confidentiality of your user id and password. You are also responsible for maintaining the confidentiality of your email id and mobile number and to avoid any unauthorised access to your mobile and / or email id.</string>
    <string name="reg3">2.3.  Information collected about You is subject to the Privacy Policy of Fateh, available at www.fatehfruits.com which is incorporated in these Terms and Conditions by reference.</string>
    <string name="acceptance1">3.1.  By accessing or using the Website, You are agreeing to the Terms and Conditions detailed herein below and concluding a legally binding contract with Fateh. You may not use the services available on the Website if You do not accept the Terms and Conditions or are unable to be bound by the Terms and Conditions. Your use of the Website is at your own risk. In order to use the Website, You must first agree to the Terms and Conditions. You can accept the Terms and Conditions by:</string>
    <string name="acceptance2">3.1.1.   Clicking to accept or agree to the Terms and Conditions, where it is made available to You on the Website.</string>
    <string name="acceptance3">3.1.2.   Actually availing the services on the Website. In this case, You understand and agree that Fateh will treat your use of the Website as acceptance of the Terms and Conditions from that point onwards.</string>
    <string name="acceptance4">3.2.  Fateh reserves the right, at its sole discretion, to change, modify, add or remove portions of these Terms and Conditions, at any time without any prior written notice to the User. You shall ensure to review these Terms and Conditions periodically for updates / changes. Your continued use of the Website following the posting of changes will mean that You accept and agree to the revisions in the Terms and Conditions.</string>
    <string name="acceptance5">3.3.  It is strongly recommended that you read and understand these "Terms of Use" carefully, as by accessing this Website, you agree to be bound by the same. If you do not agree with Terms and Conditions, you should not use or access the Website for any purpose whatsoever.</string>
    <string name="eligible1">4.1.  Services of the Website would be available to only select geographical locations in India.</string>
    <string name="eligible2">4.2.  Transactions through the Website may be subject to a delivery charge where the minimum order size is not met.</string>
    <string name="eligible3">4.3.  You will be informed of such delivery charges at the stage of check-out for a transaction through the Website.</string>
    <string name="eligible4">4.4.  Persons who are "incompetent to contract" within the meaning of the Indian Contract Act, 1872 including un-discharged insolvents etc. are not eligible to use the Website.</string>
    <string name="eligible5">4.5.  Our Website is not directed to children under the age of 18. If we become aware that a child and / or User is under the age of 18 and has registered or using our Website and application, we are entitled to remove his or her account from our system and cancel any order placed by him or her.</string>
    <string name="condition1">5.1.  Fateh has a complete right to accept or reject an order placed on this Website.</string>
    <string name="condition2">5.2.  No cancellation or replacement is available once an order is placed on the Website.</string>
    <string name="condition3">5.3.  Payment for any product purchased on this Website can be made online only through Credit Card, Debit Card, Net Banking, Online Wallets. However Fateh reserves its right to add or delete any mode of payment without any prior notice.</string>
</resources>