<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcometv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/segoeui_bold"
            android:padding="5dp"
            android:text="@string/welcome"
            android:textColor="@color/theme_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mobilenumbertv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcometv"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/segoeui_bold"
            android:padding="5dp"
            android:text="@string/mobileNumber"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/mobilenumberet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobilenumbertv"
            android:layout_margin="10dp"
            android:background="@drawable/buttonoutline_background"
            android:fontFamily="@font/segoeui"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/passwordtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mobilenumberet"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/segoeui_bold"
            android:padding="5dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passwordet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordtv"
            android:layout_margin="10dp"
            android:background="@drawable/buttonoutline_background"
            android:drawableEnd="@drawable/invisible_eye"
            android:fontFamily="@font/segoeui"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/segoeui_bolditalic"
            android:padding="5dp"
            android:text="Forgot Password?"
            android:textColor="@color/theme_color"
            android:textSize="15sp" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvForgotPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonfilled_background"
            android:fontFamily="@font/segoeui"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dontaccounttv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginbtn"
            android:layout_margin="10dp"
            android:fontFamily="@font/segoeui"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/donthaveanaccount"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/signtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dontaccounttv"
            android:fontFamily="@font/segoeui_bolditalic"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/signup"
            android:textColor="@color/theme_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signtv"
            android:layout_alignParentRight="true"
            android:drawableEnd="@drawable/ic_right"
            android:fontFamily="@font/segoeui_bold"
            android:layout_gravity="right"
            android:padding="10dp"
            android:text="@string/skip"
            android:textColor="@color/lightblack"
            android:textSize="17sp"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name" />
    </LinearLayout>
</ScrollView>